--- a/色块识别/color.ui
+++ b/色块识别/color.ui
@@ -7,32 +7,35 @@
     <x>0</x>
     <y>0</y>
     <width>676</width>
-    <height>547</height>
+    <height>520</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>676</width>
-    <height>547</height>
+    <height>520</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>676</width>
-    <height>547</height>
+    <height>520</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="animated">
+   <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>50</y>
       <width>320</width>
-      <height>240</height>
+      <height>180</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -46,9 +49,9 @@
     <property name="geometry">
      <rect>
       <x>345</x>
-      <y>40</y>
+      <y>50</y>
       <width>320</width>
-      <height>240</height>
+      <height>180</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -62,9 +65,9 @@
     <property name="geometry">
      <rect>
       <x>121</x>
-      <y>291</y>
+      <y>260</y>
       <width>541</width>
-      <height>190</height>
+      <height>191</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -151,21 +154,11 @@
      </item>
     </layout>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>11</x>
-      <y>494</y>
-      <width>653</width>
-      <height>20</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>615</x>
-      <y>525</y>
+      <x>616</x>
+      <y>500</y>
       <width>54</width>
       <height>12</height>
      </rect>
@@ -178,7 +171,7 @@
     <property name="geometry">
      <rect>
       <x>14</x>
-      <y>289</y>
+      <y>260</y>
       <width>105</width>
       <height>191</height>
      </rect>
@@ -312,8 +305,45 @@
      <string>打开摄像头</string>
     </property>
    </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>13</x>
+      <y>460</y>
+      <width>648</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::HLine</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::LinksAccessibleByMouse|Qt::TextEditable|Qt::TextSelectableByMouse</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>636</x>
+      <y>232</y>
+      <width>29</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/hui/hui.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="bg.qrc"/>
+ </resources>
  <connections/>
 </ui>
