--- a/色块识别/color.ui
+++ b/色块识别/color.ui
@@ -295,8 +295,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>11</x>
-      <y>8</y>
+      <x>110</x>
+      <y>10</y>
       <width>93</width>
       <height>27</height>
      </rect>
@@ -338,6 +338,29 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>13</x>
+      <y>12</y>
+      <width>88</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>208</x>
+      <y>10</y>
+      <width>93</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>关闭摄像头</string>
     </property>
    </widget>
   </widget>
